docs/api/qiskit/0.19/qiskit.quantum_info.Quaternion.mdx
---
title: Quaternion (v0.19)
description: API reference for qiskit.quantum_info.Quaternion in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.quantum_info.Quaternion
---

# Quaternion

<Class id="qiskit.quantum_info.Quaternion" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/quaternion.py" signature="Quaternion(data)" modifiers="class">
  A class representing a Quaternion.

  ## Methods

  <span id="quaternion-call" />

  ### \_\_call\_\_

  <Function id="qiskit.quantum_info.Quaternion.__call__" signature="Quaternion.__call__(idx)">
    Call self as a function.
  </Function>

  <span id="quaternion-mul" />

  ### \_\_mul\_\_

  <Function id="qiskit.quantum_info.Quaternion.__mul__" signature="Quaternion.__mul__(r)" />

  <span id="quaternion-from-axis-rotation" />

  ### from\_axis\_rotation

  <Function id="qiskit.quantum_info.Quaternion.from_axis_rotation" signature="Quaternion.from_axis_rotation(angle, axis)" modifiers="classmethod">
    Return quaternion for rotation about given axis.

    **Parameters**

    *   **angle** (*float*) – Angle in radians.
    *   **axis** (*str*) – Axis for rotation

    **Returns**

    Quaternion for axis rotation.

    **Return type**

    [Quaternion](qiskit.quantum_info.Quaternion "qiskit.quantum_info.Quaternion")

    **Raises**

    **ValueError** – Invalid input axis.
  </Function>

  <span id="quaternion-from-euler" />

  ### from\_euler

  <Function id="qiskit.quantum_info.Quaternion.from_euler" signature="Quaternion.from_euler(angles, order='yzy')" modifiers="classmethod">
    Generate a quaternion from a set of Euler angles.

    **Parameters**

    *   **angles** (*array\_like*) – Array of Euler angles.
    *   **order** (*str*) – Order of Euler rotations. ‘yzy’ is default.

    **Returns**

    Quaternion representation of Euler rotation.

    **Return type**

    [Quaternion](qiskit.quantum_info.Quaternion "qiskit.quantum_info.Quaternion")
  </Function>

  <span id="quaternion-norm" />

  ### norm

  <Function id="qiskit.quantum_info.Quaternion.norm" signature="Quaternion.norm()">
    Norm of quaternion.
  </Function>

  <span id="quaternion-normalize" />

  ### normalize

  <Function id="qiskit.quantum_info.Quaternion.normalize" signature="Quaternion.normalize(inplace=False)">
    Normalizes a Quaternion to unit length so that it represents a valid rotation.

    **Parameters**

    **inplace** (*bool*) – Do an inplace normalization.

    **Returns**

    Normalized quaternion.

    **Return type**

    [Quaternion](qiskit.quantum_info.Quaternion "qiskit.quantum_info.Quaternion")
  </Function>

  <span id="quaternion-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.quantum_info.Quaternion.to_matrix" signature="Quaternion.to_matrix()">
    Converts a unit-length quaternion to a rotation matrix.

    **Returns**

    Rotation matrix.

    **Return type**

    ndarray
  </Function>

  <span id="quaternion-to-zyz" />

  ### to\_zyz

  <Function id="qiskit.quantum_info.Quaternion.to_zyz" signature="Quaternion.to_zyz()">
    Converts a unit-length quaternion to a sequence of ZYZ Euler angles.

    **Returns**

    Array of Euler angles.

    **Return type**

    ndarray
  </Function>
</Class>

